--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,8 +1,8 @@
 .footer {
-  min-height: 100px;
+  height: 100px;
   width: 100%;
   background-color: rgb(10, 8, 8);
-  padding-top: 10px;
+  padding: 10px;
   color: rgb(150, 128, 5);
   position: relative;
   bottom: 0;
@@ -14,4 +14,10 @@
 
 .footer a:hover {
   color: rgb(129, 126, 126);
+}
+
+@media only screen and (max-width: 400px) {
+  .footer {
+    height: 140px;
+  }
 }
